Fix megaphone icon color

--- a/app/assets/stylesheets/layouts/manage/_common.css.sass
+++ b/app/assets/stylesheets/layouts/manage/_common.css.sass
@@ -199,6 +199,14 @@
           td:nth-child(9) .testing-icon
             color: $green
 
+        &.type-announcement
+
+          td:nth-child(4) [class*='icon-']
+            color: $purple
+
+          td:nth-child(9) .testing-icon
+            color: $purple
+
         /*-----------  Paused State  -----------*/
 
         &.paused
